[package]
name = "mbira"
version = "0.1.0"
authors = ["Jia Ye <planet2@qq.com>"]
edition = "2018"

# requirement of wasm-pack which builds crates as libraries
# it is required to have `#[wasm_bindgen(start)]` in lib.rs as starting point
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.51"
yew = "0.18.0"
wasm-bindgen = "0.2.74"
yin = "0.2.0"
once_cell = "1.8.0"
wasm-bindgen-futures = "0.4.24"
yewtil = "0.4.0"
yew_styles = { version="0.9.4", features=["forms"] }

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'AudioContext',
  'MediaRecorder',
  'MediaDevices',
  'Navigator',
  'MediaStreamConstraints',
  'MediaStream',
  'MediaStreamAudioSourceNode',
  'ScriptProcessorNode',
  'AudioBuffer',
  'AudioNode',
  'AudioParam',
  'AudioDestinationNode',
  'MediaStreamTrack',
  'AudioProcessingEvent',
]
